Hides the "employee gallery" on mobile devices until we have solved it better.. Now it´s just blank portraits with :hover that doesn´t work on mobile devices.

--- a/src/UniQode.Web/Content/Site.css
+++ b/src/UniQode.Web/Content/Site.css
@@ -348,7 +348,7 @@ h2 {
             }
 
 .contact {
-    
+    position: relative;
 }
     .contact .title {
         text-align: center;
